# libpanel

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  NEWS  README.md  TODO.md  libpanel.doap  meson.build  meson_options.txt  meson_postinstall.py  org.gnome.libpanel.demo.json  org.gnome.libpanel.example.json
data/icons/hicolor/: meson.build
demo/: demo-page.c  demo-page.h  demo-page.ui  demo-workspace.c  demo-workspace.h  demo-workspace.ui  demo.gresource.xml  main.c  meson.build
docs/: introduction.md  libpanel.toml.in  meson.build  urlmap.js
example/: example-page.c  example-window.c  example-window.ui  libpanel-example.gresource.xml  main.c  meson.build  style.css
po/: LINGUAS  POTFILES.in  ab.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  (+19 more)
src/: libpanel.gresource.xml  libpanel.h  meson.build  panel-action-group.h  panel-action-muxer-private.h  panel-action-muxer.c  panel-animation.c  panel-animation.h  panel-binding-group-private.h  panel-binding-group.c  panel-changes-dialog.c  panel-changes-dialog.h  panel-changes-dialog.ui  panel-dock-child-private.h  panel-dock-child.c  panel-dock-private.h  panel-dock-switcher.c  panel-dock-switcher.h  panel-dock-switcher.ui  panel-dock.c  panel-dock.h  panel-document-workspace.c  panel-document-workspace.h  panel-document-workspace.ui  panel-drop-controls-private.h  panel-drop-controls.c  panel-drop-controls.ui  panel-frame-header-bar-row.c  panel-frame-header-bar-row.ui  panel-frame-header-bar.c  panel-frame-header-bar.h  panel-frame-header-bar.ui  panel-frame-header-private.h  panel-frame-header.c  panel-frame-header.h  panel-frame-private.h  panel-frame-source.c  panel-frame-source.h  panel-frame-switcher-private.h  panel-frame-switcher.c  (+71 more)
subprojects/: gi-docgen.wrap
testsuite/: meson.build  test-dock.c  test-dock.ui  test-layout.c  test-paned.c
