test_dock = executable('test-dock', 'test-dock.c', dependencies: [libpanel_static_dep])
test_paned = executable('test-paned', 'test-paned.c', dependencies: [libpanel_static_dep])

test_layout = executable('test-layout', 'test-layout.c', dependencies: [libpanel_static_dep])
test('test-layout', test_layout)


